include Makefile.shared


#noinst_LIBRARIES = libas2transition.a
bin_PROGRAMS = as2transition

BUILT_SOURCES = \
	TransitionFormatter.cpp

#libas2transition_a_SOURCES = 
#	TransitionFormatter.re2c \
#	TransitionPath.cpp \
#	Timestep.cpp \
#	Predicate.cpp \
#	StringUtils.cpp 


as2transition_SOURCES = \
	main.cpp \
	TransitionFormatter.re2c \
	TransitionPath.cpp \
	Timestep.cpp \
	Predicate.cpp \
	StringUtils.cpp 

#as2transition_LDADD = libas2transition.a



